save run commands